--- a/src/assets/css/Tag.css
+++ b/src/assets/css/Tag.css
@@ -5,5 +5,4 @@
   color: var(--desaturated-dark-cyan);
   font-weight: var(--font-heavy);
   height: fit-content;
-  margin-left: 20px;
 }
